# endlessopt

./: .gitignore  Cargo.toml  README.md  config.json
.claude/: settings.local.json
src/: common.rs  main.rs  validation.rs
src/config/: mod.rs
src/gui/: app.rs
src/memory/: monitor.rs  optimizer.rs
src/process/: gamemode.rs  manager.rs
src/utils/: cleaner.rs
