[package]
name = "endlessopt"
version = "1.0.0"
edition = "2021"
authors = ["EndlessOpt Contributors"]
description = "Professional system optimization tool for Windows with glassmorphism UI"
license = "MIT"
repository = "https://github.com/Ian-bug/endlessopt"
readme = "README.md"
keywords = ["system", "optimizer", "windows", "performance", "utility", "memory", "process-management"]
categories = ["system-tools", "utility"]
exclude = ["/.github", "/assets/src", "/assets/images", "/docs", "/target"]
include = ["/assets/icon.ico", "/assets/icon.png", "/assets/icon.svg", "/config.json", "/LICENSE", "/README.md"]

[dependencies]
windows = { version = "0.58", features = [
    "Win32_Foundation",
    "Win32_System_ProcessStatus",
    "Win32_System_Threading",
    "Win32_System_Diagnostics_ToolHelp",
]}
eframe = "0.27"
egui = "0.27"
egui_extras = "0.27"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
sysinfo = "0.30"
